Yeni konular uzerine calisildi.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,44 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p> --> 
 
 
-    <!-- 6-5 -->
+    <a class="test" href="https://www.github.com/">Github</a> <br>
+    <a id="google" href="https://www.google.com/">Google</a> <br> <br>
+
+
+    <div class="bir_test">Lorem, ipsum dolor.</div> <br>
+    <div class="iki-test">Lorem, ipsum dolor.</div> <br>
+    <div class="uc test">Lorem, ipsum dolor.</div> <br>
+    <div class="dorttest">Lorem, ipsum dolor.</div> <br> <br>
+
+
+    <a href="https://www.google.com/">google</a> <br>
+    <a href="https://github.com/">github</a> <br>
+    <a href="http://github.com/">github</a> <br> <br>
+
+    <a href="https://www.google.com/">google</a> <br>
+    <a href="https://github.com/">github</a> <br>
+    <a href="http://github.com/">github</a> <br> <br>
+
+
+    <aman title="isim">Lorem, ipsum dolor.</aman> <br>
+    <aman title="isimler">Lorem, ipsum dolor.</aman> <br>
+    <aman title="isim ve şehirler">Lorem, ipsum dolor.</aman> <br> <br>
+
+    <button name="">gönder</button>
+    <ul>
+      <li name="html">HTML</li>
+      <li name="css">CSS</li>
+    </ul>
+
+
+    <ul>
+        <li>Lorem.</li>
+        <li>Veniam.</li>
+        <li>Quidem.</li>
+        <li>Modi.</li>
+        <li>Vitae?</li>
+    </ul>
+
     <ul class="color-blue">
         <li class="fw-bold">Lorem ipsum dolor sit amet.</li>
     </ul>
